mid example
